--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ilmen-eco"
+name = "ilmen-green"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,3 +8,4 @@ reqwest = { version = "0.12", features = ["json", "blocking"] }
 tokio = { version = "1", features = ["full"] }
 serde = {version = "1.0", features = ["derive"]}
 dotenv = "0.15"
+log = "0.4.22"
