--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ tokio = { version = "1", features = ["full"] }
 serde = {version = "1.0", features = ["derive"]}
 dotenv = "0.15"
 log = "0.4.22"
+env_logger = "0.11.5"
